# chirp-stt

./: .gitignore  README.md  autostart.bat  chirp.bat  config.toml  install-autostart.bat  main.py  pyproject.toml  uninstall-autostart.bat
.jules/: bolt.md  sentinel.md
src/chirp/: __init__.py  audio_capture.py  audio_feedback.py  config_manager.py  keyboard_shortcuts.py  logger.py  main.py  parakeet_manager.py  setup.py  text_injector.py  win_clipboard.py
src/chirp/assets/: __init__.py
tests/: test_audio_feedback.py  test_config_validation.py  test_logging_security.py  test_security_fixes.py  test_text_injector.py
